[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcached"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Tomas Gustavsson", email = "tomplast@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["uvloop", "pytest", "mypy", "coverage"]

[project.urls]
Documentation = "https://github.com/Tomas Gustavsson/pymcached#readme"
Issues = "https://github.com/Tomas Gustavsson/pymcached/issues"
Source = "https://github.com/Tomas Gustavsson/pymcached"

[tool.hatch.version]
path = "src/pymcached/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pymcached tests}"

[tool.coverage.run]
source_pkgs = ["pymcached", "tests"]
branch = true
parallel = true
omit = [
  "src/pymcached/__about__.py",
]

[tool.coverage.paths]
pymcached = ["src/pymcached", "*/pymcached/src/pymcached"]
tests = ["tests", "*/pymcached/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
